Feat: Added Python Server & Database

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,22 +22,28 @@
     />
 
     <!-- Bootstrap CSS File -->
-    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="static/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Libraries CSS Files -->
-    <link href="lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-    <link href="lib/magnific-popup/magnific-popup.css" rel="stylesheet" />
-    <link href="lib/hover/hover.min.css" rel="stylesheet" />
+    <link href="static/lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
+    <link
+      href="static/lib/owlcarousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="static/lib/magnific-popup/magnific-popup.css"
+      rel="stylesheet"
+    />
+    <link href="static/lib/hover/hover.min.css" rel="stylesheet" />
 
     <!-- Main Stylesheet File -->
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="static/css/style.css" rel="stylesheet" />
 
     <!-- Responsive css -->
-    <link href="css/responsive.css" rel="stylesheet" />
+    <link href="static/css/responsive.css" rel="stylesheet" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="./static/images/favicon.png" />
   </head>
 
   <body>
@@ -46,7 +52,9 @@
       <div class="row">
         <div class="container">
           <div class="logo">
-            <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
+            <a href="index.html"
+              ><img src="/static/images/logo.png" alt="logo"
+            /></a>
           </div>
 
           <div class="responsive">
@@ -109,7 +117,11 @@
           <div class="col-lg-4">
             <div class="div-img-bg">
               <div class="about-img">
-                <img src="images/me.jpg" class="img-responsive" alt="me" />
+                <img
+                  src="/static/images/me.jpg"
+                  class="img-responsive"
+                  alt="me"
+                />
               </div>
             </div>
           </div>
@@ -126,8 +138,8 @@
               </p>
               <p class="separator">
                 I'm fueled by my passion for understanding the nuances of new
-                Technologies. I consider myself a
-                <em style="color: #b8a07e;">'forever student.'</em> eager to
+                technologies. I consider myself a
+                <em style="color: #b8a07e;">'forever student.'</em> Eager to
                 both build on my academic foundations in development and stay in
                 tune with latest brand strategies and management skills through
                 continued coursework and professional development.
@@ -261,48 +273,48 @@
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits webdesign"
               >
-                <a class="popup-img" href="images/portfolio/1.jpg">
-                  <img src="images/portfolio/1.jpg" alt="streatly" />
+                <a class="popup-img" href="/static/images/portfolio/1.jpg">
+                  <img src="/static/images/portfolio/1.jpg" alt="streatly" />
                 </a>
               </div>
 
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits photography"
               >
-                <a class="popup-img" href="images/portfolio/2.jpg">
-                  <img src="images/portfolio/2.jpg" alt="img" />
+                <a class="popup-img" href="/static/images/portfolio/2.jpg">
+                  <img src="/static/images/portfolio/2.jpg" alt="img" />
                 </a>
               </div>
 
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all branding webdesig photographyn"
               >
-                <a class="popup-img" href="images/portfolio/3.jpg">
-                  <img src="images/portfolio/3.jpg" alt="img" />
+                <a class="popup-img" href="/static/images/portfolio/3.jpg">
+                  <img src="/static/images/portfolio/3.jpg" alt="img" />
                 </a>
               </div>
 
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all mockups webdesign photography"
               >
-                <a class="popup-img" href="images/portfolio/4.jpg">
-                  <img src="images/portfolio/4.jpg" alt="img" />
+                <a class="popup-img" href="/static/images/portfolio/4.jpg">
+                  <img src="/static/images/portfolio/4.jpg" alt="img" />
                 </a>
               </div>
 
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all branding uikits photography"
               >
-                <a class="popup-img" href="images/portfolio/5.jpg">
-                  <img src="images/portfolio/5.jpg" alt="img" />
+                <a class="popup-img" href="/static/images/portfolio/5.jpg">
+                  <img src="/static/images/portfolio/5.jpg" alt="img" />
                 </a>
               </div>
 
               <div
                 class="col-lg-4 col-md-6 portfolio-thumbnail all mockups uikits webdesign"
               >
-                <a class="popup-img" href="images/portfolio/6.jpg">
-                  <img src="images/portfolio/6.jpg" alt="img" />
+                <a class="popup-img" href="/static/images/portfolio/6.jpg">
+                  <img src="/static/images/portfolio/6.jpg" alt="img" />
                 </a>
               </div>
             </div>
@@ -416,10 +428,15 @@
             </div>
 
             <div class="col-lg-6">
-              <form action="" method="post" role="form" class="contactForm">
+              <form
+                action="submit"
+                method="post"
+                role="form"
+                class="contactForm"
+              >
                 <div class="row">
                   <div id="sendmessage">
-                    Your message has been sent. Thank you!
+                    Thank you! I will get in touch with you shortly.
                   </div>
                   <div id="errormessage"></div>
 
@@ -483,11 +500,9 @@
                   </div>
 
                   <div class="col-lg-12">
-                    <input
-                      type="submit"
-                      class="btn btn-defeault btn-send"
-                      value="Send message"
-                    />
+                    <button type="submit" class="btn btn-defeault btn-send">
+                      Send message
+                    </button>
                   </div>
                 </div>
               </form>
@@ -534,18 +549,18 @@
     <!-- End section footer -->
 
     <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/jquery/jquery-migrate.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/typed/typed.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/magnific-popup/magnific-popup.min.js"></script>
-    <script src="lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="./static/lib/jquery/jquery.min.js"></script>
+    <script src="./static/lib/jquery/jquery-migrate.min.js"></script>
+    <script src="./static/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./static/lib/typed/typed.js"></script>
+    <script src="./static/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="./static/lib/magnific-popup/magnific-popup.min.js"></script>
+    <script src="./static/lib/isotope/isotope.pkgd.min.js"></script>
 
     <!-- Contact Form JavaScript File -->
-    <script src="contactform/contactform.js"></script>
+    <script src="./static/contactform/contactform.js"></script>
 
     <!-- Template Main Javascript File -->
-    <script src="js/main.js"></script>
+    <script src="./static/js/main.js"></script>
   </body>
 </html>
