Change: Photo & Styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -492,7 +492,7 @@
                         name="message"
                         rows="12"
                         data-rule="required"
-                        data-msg="Please write something for us"
+                        data-msg="Please write something for me"
                         placeholder="Message"
                       ></textarea>
                       <div class="validation"></div>
